// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StraightTileModel can build a tile with the given size 1`] = `
StraightTileModel {
  "direction": "right",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 0.5 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-0.5",
  "ratio": 0.5,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 1 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 2 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 3 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and a ratio of 4 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and an unlocked ratio of 0.5 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-0.5",
  "ratio": 0.5,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": true,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and an unlocked ratio of 1 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": true,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and an unlocked ratio of 2 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-2",
  "ratio": 2,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": true,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and an unlocked ratio of 3 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-3",
  "ratio": 3,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": true,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and an unlocked ratio of 4 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-4",
  "ratio": 4,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": true,
  },
}
`;

exports[`StraightTileModel can build a tile with the given size and direction 1`] = `
StraightTileModel {
  "direction": "left",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the angle of the curve for a tile with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 2`] = `90`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 2`] = `90`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 0,
    "x": 100,
    "y": 210,
  },
  "width": 90,
  "x": 55,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
{
  "height": 141.4213562373095,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "width": 141.4213562373095,
  "x": -9.601551083914856,
  "y": 68.18019484660536,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 0,
    "x": 0,
    "y": 110,
  },
  "width": 90,
  "x": -45,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `
{
  "height": 90,
  "input": {
    "angle": 90,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 90,
    "x": -110,
    "y": 6.735557395310443e-15,
  },
  "width": 110,
  "x": -110,
  "y": -45,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
{
  "height": 141.4213562373095,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": 22.218254069479798,
    "y": 177.78174593052023,
  },
  "width": 141.42135623730948,
  "x": -9.601551083914842,
  "y": 68.18019484660537,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 0,
    "x": 100,
    "y": 210,
  },
  "width": 90,
  "x": 55,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
{
  "height": 141.4213562373095,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "width": 141.4213562373095,
  "x": -9.601551083914856,
  "y": 68.18019484660536,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
{
  "height": 110,
  "input": {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 0,
    "x": 0,
    "y": 110,
  },
  "width": 90,
  "x": -45,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `
{
  "height": 90,
  "input": {
    "angle": 90,
    "x": 0,
    "y": 0,
  },
  "output": {
    "angle": 90,
    "x": -110,
    "y": 6.735557395310443e-15,
  },
  "width": 110,
  "x": -110,
  "y": -45,
}
`;

exports[`StraightTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
{
  "height": 141.4213562373095,
  "input": {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "output": {
    "angle": 45,
    "x": 22.218254069479798,
    "y": 177.78174593052023,
  },
  "width": 141.42135623730948,
  "x": -9.601551083914842,
  "y": 68.18019484660537,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`StraightTileModel can compute the center of the curve for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 0.5 1`] = `10`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 1 1`] = `10`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 2 1`] = `10`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 3 1`] = `10`;

exports[`StraightTileModel can compute the inner radius of the curve for a tile with a ratio of 4 1`] = `10`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 0.5 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 1 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 2 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 3 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks by side for a tile with a ratio of 4 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 0.5 1`] = `1`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 1 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 2 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 3 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 4 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 1 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 2 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 3 1`] = `4`;

exports[`StraightTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 4 1`] = `4`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 0.5 1`] = `100`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 1 1`] = `100`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 2 1`] = `100`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 3 1`] = `100`;

exports[`StraightTileModel can compute the outer radius of the curve for a tile with a ratio of 4 1`] = `100`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 27.5,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 127.5,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 0.5 3`] = `
Vector2D {
  "x": 72.5,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 2 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 3 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the center point for a tile with a ratio of 4 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 0.5 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 55,
  },
  Vector2D {
    "x": -45,
    "y": 55,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 0.5 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 155,
  },
  Vector2D {
    "x": 55,
    "y": 155,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 0.5 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": 45,
    "y": 145,
  },
  Vector2D {
    "x": 45,
    "y": 55,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 1 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 1 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 1 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 2 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 2 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 2 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 3 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 3 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 3 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 4 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 4 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the left with a ratio of 4 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 0.5 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 55,
  },
  Vector2D {
    "x": -45,
    "y": 55,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 0.5 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 155,
  },
  Vector2D {
    "x": 55,
    "y": 155,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 0.5 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": 45,
    "y": 145,
  },
  Vector2D {
    "x": 45,
    "y": 55,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 1 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 1 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 1 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 2 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 2 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 2 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 3 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 3 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 3 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 4 1`] = `
[
  Vector2D {
    "x": -45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 0,
  },
  Vector2D {
    "x": 45,
    "y": 110,
  },
  Vector2D {
    "x": -45,
    "y": 110,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 4 2`] = `
[
  Vector2D {
    "x": 55,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 100,
  },
  Vector2D {
    "x": 145,
    "y": 210,
  },
  Vector2D {
    "x": 55,
    "y": 210,
  },
]
`;

exports[`StraightTileModel can compute the position of the edge points for a tile oriented to the right with a ratio of 4 3`] = `
[
  Vector2D {
    "x": 100,
    "y": 55,
  },
  Vector2D {
    "x": 100,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 145,
  },
  Vector2D {
    "x": -10,
    "y": 55.00000000000001,
  },
]
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 110,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 210,
}
`;

exports[`StraightTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -10,
  "y": 100,
}
`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 1`] = `180`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`StraightTileModel can compute the side of the curve for a tile with a ratio of 4 1`] = `0`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `"rotate(180 100 155)"`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `"rotate(45 100 100)rotate(180 100 155)"`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `"rotate(180 0 55)"`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `"rotate(90 0 0)rotate(180 0 55)"`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `"rotate(45 100 100)rotate(180 100 155)"`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 0 degrees 1`] = `""`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `"rotate(45 100 100)"`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `""`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 2 and positioned at [0, 0] rotated by 90 degrees 1`] = `"rotate(90 0 0)"`;

exports[`StraightTileModel can compute the transform command to rotate the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `"rotate(45 100 100)"`;

exports[`StraightTileModel can export to an object a tile oriented to the left having a ratio of 1 1`] = `
{
  "direction": "left",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`StraightTileModel can export to an object a tile oriented to the left having a ratio of 2 1`] = `
{
  "direction": "left",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`StraightTileModel can export to an object a tile oriented to the right having a ratio of 1 1`] = `
{
  "direction": "right",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`StraightTileModel can export to an object a tile oriented to the right having a ratio of 2 1`] = `
{
  "direction": "right",
  "ratio": 1,
  "type": "straight-tile",
}
`;
